--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,6 @@ body {
   overflow: none;
   background-color: #000;
   color: #fff;
-  font-family: Ubuntu, sans-serif;
+  font-family: Mustard, Ubuntu, sans-serif;
   font-size: 5rem;
 }
