--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 
 body {
   background-image: url("background.png");
-  background-size:1rem;
+  background-size:20vh;
   background-position:center;
   height:100vh;
   width:100vh;
