--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @font-face {
   font-family: Mustard;
   src: url('HenrySansRegular.woff') format('woff'),
-    url('HenrySansRegular.ttf') format('truetype')
+    url('HenrySansRegular.ttf') format('truetype');
   font-weight: normal;
 }
 @font-face {
   font-family: Mustard;
   src: url('HenrySansBold.woff') format('woff'),
-    url('HenrySansBold.ttf') format('truetype')
+    url('HenrySansBold.ttf') format('truetype');
   font-weight: bolder;
 }
 @font-face {
   font-family: Mustard;
   src: url('HenrySansMedium.woff') format('woff'),
-    url('HenrySansMedium.ttf') format('truetype')
+    url('HenrySansMedium.ttf') format('truetype');
   font-weight: bold;
+}
+
+@keyframes icon {
+  0% {transform: rotate(0deg)}
+  100% {transform:rotate(360deg)}
 }
 
 body {
   background-image: url("background.png");
   background-size:20vh;
   background-position:center;
-  height:100vh;
-  width:100vh;
-  backdrop-filter: contrast(-50%)
   overflow: hidden;
   background-color: #000;
   color: #fff;
   font-family: Mustard, Ubuntu, sans-serif;
   font-size: 1em;
+}
+
+h1 {
+  text-align: center;
+  font-size: 5rem;
+  font-family: Montserrat, Mustard, sans-serif;
+}
+
+#flex1 {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#flex2 {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+#icon {
+  animation: icon 5s linear infinite;
+}
+
+#header-icon {
+  display: inline;
+  width: 4rem;
+  height: 4rem;
 }
