--- a/styles.css
+++ b/styles.css
@@ -48,18 +48,15 @@ h1 {
   height: 100%;
   display: flex;
   flex-direction: column;
-}
-
-#flex2 {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 #icon {
   animation: icon 5s linear infinite;
+  text-align: center;
+  width: 6.25in;
+  height: 6.25in;
 }
 
 #header-icon {
