--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 }
 
 body {
-  background-image: url("background.png");
+  background-image: url("media/background.png");
   background-size:20vh;
   background-position:center;
   overflow: hidden;
@@ -52,6 +52,27 @@ h1 {
   align-items: center;
 }
 
+#flex2 {
+  margin: auto;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#flex2 > div > a > img {
+  width: 3rem;
+  height: 3rem;
+  margin: 0 0.5em
+}
+
+#flex2 > div > a > img#size-2 {
+  width: 4.5rem;
+  height: 4.5rem;
+}
+
 #icon {
   animation: icon 17.5s linear infinite;
   text-align: center;
@@ -59,7 +80,7 @@ h1 {
   height: 6.25in;
 }
 
-#header-icon {
+#header-icon { 
   display: inline;
   width: 4rem;
   height: 4rem;
